--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider:
 
+  google_nav_bar: ^5.0.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
