--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   url_launcher: ^6.1.11
   smooth_page_indicator: ^1.1.0
   get: ^4.6.5
+  form_builder_validators: ^9.0.0
+  email_validator: ^2.1.17
+  http: ^1.1.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
