--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   email_validator: ^2.1.17
   http: ^1.1.0
   fluttertoast: ^8.2.2
+  awesome_snackbar_content: ^0.1.3
 
 dev_dependencies:
   flutter_test:
