--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,18 +34,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  carousel_slider:
-  curved_navigation_bar: ^1.0.3
+
   persistent_bottom_nav_bar: ^5.0.2
-  url_launcher: ^6.1.11
-  smooth_page_indicator: ^1.1.0
   get: ^4.6.5
   form_builder_validators: ^9.0.0
   email_validator: ^2.1.17
   http: ^1.1.0
   fluttertoast: ^8.2.2
-  awesome_snackbar_content: ^0.1.3
+  image_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
