--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^1.1.0
   fluttertoast: ^8.2.2
   image_picker: ^1.0.0
+  file_picker: ^5.3.2
 
 dev_dependencies:
   flutter_test:
