--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   fluttertoast: ^8.2.2
   image_picker: ^1.0.0
   file_picker: ^5.3.2
+  advance_pdf_viewer_fork: any
 
 dev_dependencies:
   flutter_test:
