--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   image_picker: ^1.0.0
   file_picker: ^5.3.2
 
-  advance_pdf_viewer_fork: any
+  # advance_pdf_viewer_fork: any
   flutter_file_downloader: ^1.1.2
 
   dio: ^5.2.1+1
@@ -57,6 +57,10 @@ dependencies:
   intl:
   google_fonts:
   date_picker_timeline:
+  flutter_staggered_animations:
+
+  firebase_messaging: ^14.6.5
+  firebase_core: ^2.15.0
 
 dev_dependencies:
   flutter_test:
