--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   google_fonts:
   date_picker_timeline:
   flutter_staggered_animations:
+  flutter_staggered_grid_view:
 
   firebase_messaging: ^14.6.5
   firebase_core: ^2.15.0
