--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <application
-        android:label="enye_app"
+        android:label="ENYE Admin"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
