--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,12 +88,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/backgrounds/
-    - assets/images_1/
-    - assets/images_2/
     - assets/logo/
     - assets/icons/
-    - assets/homepage/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -107,17 +103,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Dashboardicon
-      fonts:
-        - asset: assets/fonts/Dashboardicon.ttf
-
-    - family: Raleway
-      fonts:
-        - asset: assets/fonts/Raleway-Regular.ttf
-        - asset: assets/fonts/Raleway-Italic.ttf
-          style: italic
-
+  # fonts:
+  #  - family: Raleway
+  #    fonts:
+  #      - asset: assets/fonts/Raleway-Regular.ttf
+  #      - asset: assets/fonts/Raleway-Italic.ttf
+  #        style: italic
+  #
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
