--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,35 +35,36 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
-  persistent_bottom_nav_bar: ^5.0.2
-  get: ^4.6.5
-  form_builder_validators: ^9.0.0
-  email_validator: ^2.1.17
-  http: ^1.1.0
-  fluttertoast: ^8.2.2
-  image_picker: ^1.0.0
-  file_picker: ^5.3.2
+  persistent_bottom_nav_bar:
+  get:
+  form_builder_validators:
+  email_validator:
+  http:
+  fluttertoast:
+  image_picker:
+  file_picker:
 
   # advance_pdf_viewer_fork: any
-  flutter_file_downloader: ^1.1.2
+  flutter_file_downloader:
 
-  dio: ^5.2.1+1
+  dio:
   permission_handler:
-  path_provider: ^2.0.15
-  open_file_plus: ^3.4.1
+  path_provider:
+  open_file_plus:
 
-  sizer: ^2.0.15
-  flutter_session_manager: ^1.0.3
+  sizer:
+  flutter_session_manager:
   intl:
   google_fonts:
   date_picker_timeline:
   table_calendar:
   flutter_staggered_animations:
   flutter_staggered_grid_view:
-  flutter_keyboard_visibility:
+  email_otp:
+  pinput:
 
-  firebase_messaging: ^14.6.5
-  firebase_core: ^2.15.0
+  firebase_messaging:
+  firebase_core:
 
 dev_dependencies:
   flutter_test:
