--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,9 +62,12 @@ dependencies:
   flutter_staggered_grid_view:
   email_otp:
   pinput:
+  flutter_local_notifications:
 
   firebase_messaging:
   firebase_core:
+  google_sign_in:
+  firebase_auth:
 
 dev_dependencies:
   flutter_test:
